--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,9 +8,7 @@ website:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/CrumpLab/quartoCourseBlog
-      - icon: twitter
-        href: https://twitter.com/MattCrumpLab
+        href: https://github.com/siru1366/blog
 format:
   html:
     theme: minty
